# husband-c-ry

./: .gitignore  README.md  pubspec.yaml
.github/: pull-request-template.md
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/husbandry/: MainActivity.kt
assets/: .gitignore
assets/books/: b.json  b1.json  b2.1.json  b2.2.json
assets/conversations/: g1.json  g2.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: .gitignore  config.dart  dag.dart  gty.dart  main.dart  qs.dart  utility.dart
linux/: CMakeLists.txt  application.cc  application.h  main.cc  my_application.cc
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
server/: .gitignore  README.md  agency.py  api.py  pyproject.toml
test/: widget_test.dart
web/: flutter.js  flutter_bootstrap.js  index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
