[project]
name = "husband-c-ry-agency"
version = "0.1.0"
description = "AI agents and APIs"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.128.8",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.11",
    "langchain-google-genai>=4.2.0",
    "langchain-mistralai>=1.1.1",
    "langchain-openai>=1.1.9",
]
